@@ -1,3 +1,7 @@
+* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.1.2
+- Update the upper bound of stdlib to < 6.0.0
+- Update a URL in the README.md
+
 * Fri Dec 14 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.1
 - Fix infinite recursion issue in the SH profile script
 
